--- a/.github/workflows/veracode-sca-scan.yml
+++ b/.github/workflows/veracode-sca-scan.yml
@@ -78,11 +78,13 @@ jobs:
           fi
           rm -rf veracode-helper
 
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Run Veracode SCA
         env:
           SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
           JAVA_OPTS: -Xms2g -Xmx4g
-        uses: veracode/veracode-sca@v2.1.12
+        uses: ./actions/veracode-sca
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create-issues: false
