--- a/.github/workflows/veracode-sca-scan.yml
+++ b/.github/workflows/veracode-sca-scan.yml
@@ -84,7 +84,7 @@ jobs:
         env:
           SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
           JAVA_OPTS: -Xms2g -Xmx4g
-        uses: ./acions/veracode-sca
+        uses: ./actions/veracode-sca
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create-issues: false
