veracode-iac-secret-scan-actions

--- a/.github/workflows/veracode-iac-secrets-scan.yml
+++ b/.github/workflows/veracode-iac-secrets-scan.yml
@@ -28,9 +28,14 @@ jobs:
     runs-on: ubuntu-latest
     name: Validations
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Verify Veracode API credentials
+        env:
+          SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
+          JAVA_OPTS: -Xms2g -Xmx4g
         id: verify_api_creds
-        uses: Veracode/github-actions-integration-helper@v0.1.7
+        uses: ./actions/github-actions-integration-helper
         with:
           action: validateVeracodeApiCreds
           token: ${{ github.event.client_payload.token }}
@@ -51,8 +56,13 @@ jobs:
           repository: ${{ github.event.client_payload.repository.full_name }}
           ref: ${{ github.event.client_payload.sha }}
           token: ${{ github.event.client_payload.token }}
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Run Veracode IaC/Secrets Scanning
-        uses: veracode/container_iac_secrets_scanning@v1.0.4
+        env:
+          SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
+          JAVA_OPTS: -Xms2g -Xmx4g
+        uses: ./actions/container_iac_secrets_scanning
         with:
             vid: ${{ secrets.VERACODE_API_ID }}
             vkey: ${{ secrets.VERACODE_API_KEY }}
