--- a/.github/workflows/veracode-sandbox-scan.yml
+++ b/.github/workflows/veracode-sandbox-scan.yml
@@ -51,8 +51,13 @@ jobs:
           path: ./veracode_artifact_directory
 
       # run the policy scan action
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Veracode Upload and Scan Action Step
-        uses: veracode/uploadandscan-action@v0.1.7
+        env:
+          SRCCLR_API_TOKEN: ${{ secrets.VERACODE_AGENT_TOKEN }}
+          JAVA_OPTS: -Xms2g -Xmx4g
+        uses: ./actions/uploadandscan-action
         id: upload_and_scan
         with:
           appname: ${{ github.event.client_payload.user_config.profile_name }}
