--- a/.github/workflows/veracode-pipeline-scan.yml
+++ b/.github/workflows/veracode-pipeline-scan.yml
@@ -121,8 +121,8 @@ jobs:
           artifact_name: ${{ matrix.file }}
           debug: 1
     
-      - name: Checkout repository
-        uses: actions/checkout@v3  # Make sure repo files are available    
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3  # Make sure repo files are available    
       - name: Veracode Pipeline Results
         if: always()
         id: prepare-results
@@ -156,7 +156,7 @@ jobs:
 
       - name: Create flaws as issues
         if: ${{ inputs.create_issue && always() }}
-        uses: veracode/veracode-flaws-to-issues@v2.2.25 # Hard to Convert. need to focus on this.
+        uses: veracode/veracode-flaws-to-issues@v2.2.25
         with:
           scan-results-json: mitigated_${{ strategy.job-index }}-filtered_results.json
           repo_owner: ${{ inputs.owner }}
