flaws to issues action added

--- a/.github/workflows/veracode-pipeline-scan.yml
+++ b/.github/workflows/veracode-pipeline-scan.yml
@@ -154,9 +154,11 @@ jobs:
           ref: ${{ inputs.ref }}
           githubToken: ${{ inputs.token }}
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Create flaws as issues
         if: ${{ inputs.create_issue && always() }}
-        uses: veracode/veracode-flaws-to-issues@v2.2.25
+        uses: ./actions/veracode-flaws-to-issues
         with:
           scan-results-json: mitigated_${{ strategy.job-index }}-filtered_results.json
           repo_owner: ${{ inputs.owner }}
