--- a/.github/workflows/veracode-policy-scan.yml
+++ b/.github/workflows/veracode-policy-scan.yml
@@ -181,7 +181,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3  # Make sure repo files are available          
       - name: Create flaws as issues
-        uses: ./actions/veracode-flaws-to-issues@v2.2.25
+        uses: ./actions/veracode-flaws-to-issues
         with:
           scan-results-json: '/tmp/policy_flaws.json'
           repo_owner: ${{ inputs.owner }}
