--- a/.github/workflows/veracode-sandbox-scan.yml
+++ b/.github/workflows/veracode-sandbox-scan.yml
@@ -51,8 +51,8 @@ jobs:
           path: ./veracode_artifact_directory
 
       # run the policy scan action
-      - name: Checkout repository
-        uses: actions/checkout@v3  # Make sure repo files are available
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3  # Make sure repo files are available
       - name: Veracode Upload and Scan Action Step
         uses: ./actions/uploadandscan-action
         id: upload_and_scan
