--- a/.github/workflows/binary-ready-veracode-sast-policy-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-policy-scan.yml
@@ -28,9 +28,11 @@ jobs:
     runs-on: ubuntu-latest
     name: Validations
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Verify Veracode API credentials
         id: verify_api_creds
-        uses: veracode/github-actions-integration-helper@v0.1.7
+        uses: ./actions/github-actions-integration-helper
         with:
           action: validateVeracodeApiCreds
           token: ${{ github.event.client_payload.token }}
@@ -40,10 +42,12 @@ jobs:
           source_repository: ${{ github.event.client_payload.repository.full_name }}
           check_run_id: ${{ needs.register.outputs.run_id }}
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Verify Policy name
         id: verify_policy_name
         if: success()
-        uses: veracode/github-actions-integration-helper@v0.1.7
+        uses: ./actions/github-actions-integration-helper
         with:
           action: validatePolicyName
           token: ${{ github.event.client_payload.token }}
@@ -72,8 +76,10 @@ jobs:
           name: ${{ github.event.client_payload.repository.artifact_file }}
           path: ./veracode_artifact_directory
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Veracode Upload and Scan Action Step
-        uses: veracode/uploadandscan-action@v0.1.7
+        uses: ./actions/uploadandscan-action
         id: upload_and_scan
         with:
           vid: '${{ secrets.VERACODE_API_ID }}'
@@ -87,10 +93,12 @@ jobs:
           scantimeout: 30
           failbuild: ${{ github.event.client_payload.user_config.break_build_policy_findings }}
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Veracode Policy Results
         id: prepare-results
         if: always()
-        uses: veracode/github-actions-integration-helper@v0.1.7
+        uses: ./actions/github-actions-integration-helper
         with:
           action: 'preparePolicyResults'
           token: ${{ github.event.client_payload.token }}
@@ -109,7 +117,9 @@ jobs:
     if: ${{ github.event.client_payload.user_config.sandbox_scan.execute_remove_sandbox_action && always() }}
     name: Remove Sandbox
     steps:
-      - uses: veracode/github-actions-integration-helper@v0.1.7
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
+      - uses: ./actions/github-actions-integration-helper
         with:
           action: 'removeSandbox'
           vid: ${{ secrets.VERACODE_API_ID }}
@@ -136,8 +146,10 @@ jobs:
           name: policy-flaws
           path: /tmp
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Convert policy scan output to SARIF format
-        uses: Veracode/veracode-pipeline-scan-results-to-sarif@v2.0.4
+        uses: ./actions/veracode-pipeline-scan-results-to-sarif
         with:
           scan-type: policy
           results-json: '/tmp/policy_flaws.json'
@@ -167,8 +179,10 @@ jobs:
           name: 'policy-flaws'
           path: /tmp
 
+      - name: Checkout repository
+        uses: actions/checkout@v3  # Make sure repo files are available
       - name: Create flaws as issues
-        uses: veracode/veracode-flaws-to-issues@v2.2.25
+        uses: ./actions/veracode-flaws-to-issues
         with:
           scan-results-json: '/tmp/policy_flaws.json'
           repo_owner: ${{ github.event.client_payload.repository.owner }}
