--- a/.github/workflows/template-register.yaml
+++ b/.github/workflows/template-register.yaml
@@ -12,9 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     name: register
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3  # Make sure repo files are available
     - name: Register build
       id: register-build
-      uses: veracode/github-actions-integration-helper@v0.1.7
+      uses: ./actions/github-actions-integration-helper
       with:
         action: registerBuild
         token: ${{ github.event.client_payload.token }}
