--- a/.github/workflows/veracode-policy-scan.yml
+++ b/.github/workflows/veracode-policy-scan.yml
@@ -73,8 +73,8 @@ jobs:
           echo "VERSION=${{ github.run_id }}-$(date +'%Y%m%d-%H%M%S')" >> $GITHUB_ENV
 
       # run the policy scan action
-      - name: Checkout repository
-        uses: actions/checkout@v4  # Make sure repo files are available
+      # - name: Checkout repository
+      #   uses: actions/checkout@v4  # Make sure repo files are available
       - name: Veracode Upload and Scan Action Step
         uses: ./actions/uploadandscan-action
         id: upload_and_scan
@@ -92,8 +92,8 @@ jobs:
           failbuild: ${{ inputs.break_build_policy_findings }}
           gitRepositoryUrl: ${{ github.server_url }}/${{ inputs.source_repository }}
 
-      - name: Checkout repository
-        uses: actions/checkout@v4 
+      # - name: Checkout repository
+      #   uses: actions/checkout@v4 
       - name: Veracode Policy Results
         id: prepare-results
         if: always()
