--- a/.github/workflows/veracode-policy-scan.yml
+++ b/.github/workflows/veracode-policy-scan.yml
@@ -92,8 +92,8 @@ jobs:
           failbuild: ${{ inputs.break_build_policy_findings }}
           gitRepositoryUrl: ${{ github.server_url }}/${{ inputs.source_repository }}
 
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4 
+      - name: Checkout repository
+        uses: actions/checkout@v4 
       - name: Veracode Policy Results
         id: prepare-results
         if: always()
