--- a/.github/workflows/veracode-sca-scan.yml
+++ b/.github/workflows/veracode-sca-scan.yml
@@ -88,5 +88,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           create-issues: false
-          recursive: true
-          allow-dirty: true
+          recursive: false
+          allow-dirty: false
